tests/build/property_macro/fail/args_count_no_input_capture_only.rs
use zero_ui::core::property;

#[property(capture_only)]
pub fn no_inputs_capture_only() -> ! { }

fn main() { }