tests/build/property_macro/fail/args_count_no_input_capture_only.stderr
error: capture_only properties must have at least 1 parameter
 --> $DIR/args_count_no_input_capture_only.rs:4:30
  |
4 | pub fn no_inputs_capture_only() -> ! { }
  |                              ^^
